--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-yfinance
-pandas
-numpy
-scikit-learn
-matplotlib
-tensorflow
-streamlit
-joblib
+streamlit==1.35.0
+tensorflow==2.15.0
+pandas==2.2.2
+numpy==1.24.3
+matplotlib==3.7.1
+scikit-learn==1.3.2
+yfinance==0.2.37
+joblib==1.3.2
