--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 tensorflow==2.11.0
-streamlit
-protobuf==3.20.3
+streamlit==1.22.0
+protobuf==3.19.6
 pandas==1.5.3
 numpy==1.24.3
 matplotlib==3.7.1
